@@ -1,6 +1,11 @@
 OpenLDAP 2.2 Change Log
 
 OpenLDAP 2.2.18 Engineering
+	Fixed libldap schema keyword sensitivity 
+	Fixed libldap DN filter sensitivity 
+	Fixed slapd matching rule name sensitivity
+	Fixed slapd referral memory leak
+	Fixed slapd mods2entry memory leak
 
 OpenLDAP 2.2.17 Release
 	Fixed slapd syncrepl memory leak bugs
